# wagtail-govuk

./: Dockerfile  README.md  manage.py  pyproject.toml
.github/workflows/: deploy.yml
govuk/: adapters.py  api.py  apps.py  authentication.py  content_discovery.py  content_discovery_import.py  context_processors.py  forms.py  middleware.py  models.py  oidc.py  search_backend.py  urls.py  views.py  wagtail_hooks.py  wsgi.py
govuk/migrations/: 0001_home_initial.py  0002_convert_root_page_to_homepage.py  0003_sectionpage.py  0005_convert_homepage_to_sectionpage.py  0007_alter_sectionpage_rows.py  0009_alter_sectionpage_enable_combined_service_navigation_and_hero_styling.py  0010_phasebannersettings.py  0012_contentpage_enable_combined_service_navigation_and_hero_styling_and_more.py  0013_footersettings.py  0014_govuktag_alter_sectionpage_rows_contentpagetag_and_more.py  0015_alter_sectionpage_rows.py  0016_contentdiscoverysettings_contentdiscoverysource_and_more.py  0017_externalcontentitem_created_at_and_more.py  0018_contentdiscoverysource_disable_tls_verification.py  0019_remove_contentdiscoverysource_default_tags_and_more.py  0020_externalcontentitemtag_and_more.py  0021_externalcontentlistingpage_and_more.py  0022_taglistingspage_enable_source_filter_and_more.py  0023_contentpage_enable_free_text_heading_navigation_and_more.py  0024_authenticatedredirectsettings_and_more.py  0025_feedback.py  0026_rename_home_tables.py
govuk/settings/: base.py  dev.py  local.py
govuk/static/: main.css  main.js
home/: content_discovery.py  models.py  wagtail_hooks.py
(+47 files in other folders)
